force-app/main/default/objects/Maintenance_Message__c/Maintenance_Message__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Message for system maintenance page</description>
    <label>Maintenance Message</label>
</CustomObject>