force-app/main/default/objects/Maintenance_Message__c/fields/Body_Message__c.field-meta.xml
<CustomField>
    <fullName>Body_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Body Message</label>
    <type>TextArea</type>
</CustomField>