force-app/main/default/objects/Maintenance_Message__c/fields/Header_Message__c.field-meta.xml
<CustomField>
    <fullName>Header_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Header Message</label>
    <type>TextArea</type>
</CustomField>