force-app/main/default/objects/Maintenance_Message__c/fields/Title_Message__c.field-meta.xml
<CustomField>
    <fullName>Title_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Title Message</label>
    <length>100</length>
    <type>Text</type>
</CustomField>